--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
     "name": "balolearn",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "prepare": "husky"
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.0",
@@ -27,6 +29,8 @@
         "eslint": "^8",
         "eslint-config-next": "15.0.2",
         "eslint-config-prettier": "^9.1.0",
+        "husky": "^9.1.6",
+        "lint-staged": "^15.2.10",
         "postcss": "^8",
         "prettier": "3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.8",
