--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@types/bun": "^1.1.14",
+        "@tailwindcss/typography": "^0.5.15",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
